--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pertamax"
         tools:targetApi="31">
+
+        <!-- Splash Screen Activity (Launcher) -->
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.splashscreen.SplashActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Login Activity -->
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
+        <!-- Main Activity -->
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Pertamax"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true"/>
     </application>
 
 </manifest>
